Fix misalignment of Legend dropdown.

--- a/less/explanation.less
+++ b/less/explanation.less
@@ -12,7 +12,25 @@
   padding-top: 50px;
   padding-bottom: 50px;
   font-size: @font-size-h3;
+
   #key {
+    background-color: red;
+    display: inline;
+    padding: 0;
+
     font-size: @font-size-large;
+    color: @dark;
+    
+    ul {
+      width: 100%;
+    }
+
+    ul li {
+      padding-left: 5px;
+    }
+
+    ul li i {
+      padding-right: 5px;
+    }
   }
 }
