--- a/less/main.less
+++ b/less/main.less
@@ -3,7 +3,6 @@ html {
   margin: 0;
   padding: 0;
   background-color: @gray-dark;
-  
 }
 
 body {
@@ -15,16 +14,4 @@ body {
 
 #wrap {
   .container();
-}
-
-#key {
-  color: @dark;
-
-  ul li {
-    padding-left: 5px;
-  }
-
-  ul li i {
-    padding-right: 5px;
-  }
 }
